syntax = "proto3";

package greet;

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}

message LongGreetRequest {
	Greeting greeting = 1;
}

message LongGreetResponse {
	string result = 1;
}

service GreetingService {
	// Unrarys
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}

	// Client streaming
	rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {}
}